# aivectormemory

./: .gitignore  README.md  pyproject.toml
aivectormemory/: __init__.py  __main__.py  config.py  errors.py  install.py  protocol.py  server.py
aivectormemory/db/: __init__.py  connection.py  issue_repo.py  memory_repo.py  schema.py  state_repo.py
aivectormemory/embedding/: __init__.py  engine.py
aivectormemory/tools/: __init__.py  auto_save.py  digest.py  forget.py  recall.py  remember.py  status.py  track.py
aivectormemory/web/: api.py  app.py
aivectormemory/web/static/: app.js  i18n.js  index.html  style.css
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.zh-TW.md
